--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -1,24 +1,27 @@
 .navbar {
-  background-color: white;
   height: 80px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 999;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-container {
   display: flex;
+  background-color: white;
   justify-content: space-between;
   align-items: center;
   height: 80px;
   max-width: 1200px;
   width: 100%;
+  margin-top: 2rem;
+  border-radius: 4rem;
   padding: 0 24px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-logo {
