--- a/client/src/sections/profile.css
+++ b/client/src/sections/profile.css
@@ -39,7 +39,7 @@
 }
 
 .moon-icon {
-  color: #818cf8;
+  color: #e9e9e9;
   display: none;
 }
 
@@ -131,7 +131,7 @@
 }
 
 .settings-button i {
-  color: #64748b;
+  color: #cdcdcd;
 }
 
 .dark .settings-button i {
@@ -438,6 +438,7 @@
 
 /* Main Content Styles */
 .main-content {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
