Landing page edit

--- a/client/src/components/about.css
+++ b/client/src/components/about.css
@@ -3,7 +3,7 @@
   padding: 80px 20px;
   background-color: #f8f4fc;
   width: auto;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   margin: 0 auto;
 }
 
@@ -36,6 +36,8 @@
   gap: 40px;
   background-color: #e9e3ff;
   border-radius: 16px;
+  padding: 1.5rem;
+  margin-top: 5rem;
 }
 
 /* Image Styles */
@@ -46,7 +48,7 @@
 }
 
 /* Text Content Styles */
-.section-title {
+.about-section-title {
   font-size: 5.5rem;
   font-weight: 700;
   color: #263238;
@@ -65,7 +67,7 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 50px;
   align-items: center;
   background-color: #f9f3ff;
   border-radius: 16px;
@@ -99,9 +101,10 @@
 }
 
 .column-description {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   color: #455a64;
   margin-bottom: 20px;
+  line-height: 2;
 }
 
 /* Responsive Design */
