--- a/client/src/components/contact.css
+++ b/client/src/components/contact.css
@@ -1,10 +1,10 @@
 .contact-container {
   display: flex;
-  max-width: 1200px;
   margin: 0 auto;
   padding: 3rem 2rem;
   gap: 4rem;
   font-family: "Arial", sans-serif;
+  background-color: white;
 }
 
 .contact-left {
@@ -23,14 +23,14 @@
 
 .subtle-text {
   font-size: 1rem;
-  color: #666;
+  color: #232323;
   text-transform: uppercase;
   letter-spacing: 1px;
   margin-bottom: 0.5rem;
 }
 
 .contact-intro h1 {
-  font-size: 2.5rem;
+  font-size: 5rem;
   color: #333;
   margin: 0;
 }
@@ -58,6 +58,7 @@
   border: 1px solid #ddd;
   border-radius: 4px;
   font-size: 1rem;
+  width: 650px;
 }
 
 .form-group textarea {
