--- a/client/src/components/features.css
+++ b/client/src/components/features.css
@@ -1,6 +1,6 @@
 .features-section {
   padding: 4rem 2rem;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   margin: 0 auto;
   font-family: "Arial", sans-serif;
   text-align: center;
